--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/proxyquire": "^1.3.27",
     "@types/sinon": "^2.2.1",
     "@types/sinon-chai": "^2.7.27",
+    "@types/socket.io": "^1.4.31",
     "@types/superagent": "^3.5.3",
     "@types/supertest": "^2.0.0",
     "ajv": "^5.2.4",
@@ -95,6 +96,7 @@
     "semantic-release": "^7.0.2",
     "sinon": "^4.0.1",
     "sinon-chai": "^2.10.0",
+    "socket.io": "^2.0.4",
     "supertest": "^3.0.0",
     "swagger-ui-express": "^2.0.0",
     "ts-node": "^3.0.2",
